src/objects/WES_App_Contacts__c.object
<CustomObject>
    <description>Used to help associate and check Partners and Trustees related to a WES Application Request.</description>
    <fields>
        <fullName>CompanyTradingAddress__c</fullName>
        <formula>Contact__r.Account.Physical_Street_Address__c  &amp; BR() 
&amp;IF(NOT(ISBLANK(Contact__r.Account.WES_Address_Line2__c )), Contact__r.Account.WES_Address_Line2__c &amp; BR(), NULL) 
&amp;IF(NOT(ISBLANK( Contact__r.Account.WES_Address_Line3__c )), Contact__r.Account.WES_Address_Line3__c  &amp; BR(), NULL) 
&amp;Contact__r.Account.Physical_City__c &amp; BR() 
&amp;Contact__r.Account.Physical_Zip_Postal_Code__c</formula>
        <label>Company Trading Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactName__c</fullName>
        <formula>HYPERLINK(&quot;/lightning/r/WES_App_Contacts__c/&quot;&amp;Id&amp;&quot;/view&quot;, TEXT(Contact__r.Salutation)&amp;&quot; &quot;&amp;Contact__r.Full_Name__c, &apos;_self&apos;)</formula>
        <label>Contact Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>WES App Contacts</relationshipLabel>
        <relationshipName>WES_App_Contacts</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>RequiredInfo__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for roll-up summary on validation for WES Application for Address and DOB.</description>
        <label>Required Info</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Partner</fullName>
                </value>
                <value>
                    <fullName>Trustee</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WESApplicationRequest__c</fullName>
        <label>WES Application Request</label>
        <referenceTo>WES_Application_Request__c</referenceTo>
        <relationshipLabel>WES App Contacts</relationshipLabel>
        <relationshipName>WES_App_Contacts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>WES App Contacts</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>WES App Contacts ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>WES App Contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>